# jetstream

./: .gitignore  CMakeLists.txt  COPYRIGHT  DESIGN.txt  Makefile  NOTICES  README.md  ROADMAP  cloc.sh  get_my_data.sh  possible_libraries.txt  regions.txt  run_py_int_tests.sh  run_py_tests.sh  run_py_unit_tests.sh  worker_api.proto
adapt_experiments/: background_adapt.sh  period_variation.py  tcp1_trace.txt  tcp2_trace.txt  udp1_trace.txt  udp2_trace.txt  wifi_tc_simulate.py
config/: README.md  datanode.conf  local.conf  local_bare.conf  local_mn.conf
data_analysis/: coral_hist_truth.py  graph_bw.py  latency_over_time.py  plot_compressions.py  plot_latencies.py  plot_local_deg.py  plot_local_deg.sh
docs/: DESIGN.txt  Mats_experiment_log.rtf  ROADMAP  client_examples.txt  coding standards.txt  coding_standard.txt  mysql install notes.txt  possible_libraries.txt  programming_guide.txt  synchro.txt
docs/api_docs/: Doxyfile
masstree/: shared_config.hh
masstree/doc/: spec.synctex.gz(busy)
masstree_source/: Makefile  asr_mttest.cc  compiler.hh  config.h  js_mt_shim.cc  js_mt_shim.h  kvrow.hh  kvtest.hh  masstree.cc  masstree_struct.hh  mtd.cc  string_base.hh
saved_data_nsdi/: keystats_sns.out
sns_experiments/: ansible_hosts  ansible_hosts_1_27  ansible_hosts_sns  ansible_hosts_vicci  ansible_hosts_vicci_gt.2014.01.27  base_vars.yml  bootstrap_fireball_vicci.yml  bootstrap_sns.yml  bootstrap_vicci.yml  build.yml  build_include.yml  build_include_sudo_mysql.yml  build_include_sudo_ntp.yml  build_sns.yml  build_vicci.yml  config_sns.yml  config_vicci.yml  copy_data_vicci.yml  copy_log_sizes_back.yml  copy_results_back_vicci.yml  coral_ground_truth.py  coral_key_counting.py  deploy_key  deploy_key.pub  extract_data_from_coral.py  get_deb_packages.sh  graph_bw.py  install_mysql_udfs.yml  make_clean_vicci.yml  multinode_start.sh  multinode_stop.sh  nodes.txt  nodes_1_27_14  plot_compressions.py  plot_latencies.py  plot_q_value.py  pull_and_build.sh  run_playbook_sns.sh  run_playbook_vicci.sh  setup.yml  (+6 more)
sns_experiments/data/: coral_url_count_domain_analyze_288_bwcap10_mr10  run_25  run_26  run_40  run_63_mr5_sample_steps1000
sns_experiments/modules/: fireball
src/: js_unit_tests.cc
src/aggregates/: CMakeLists.txt  cm_sketch.cc  cm_sketch.h  quantile_est.cc  quantile_est.h
src/comm/: CMakeLists.txt  Makefile  client_conn.cc  client_conn.h  client_connection.cc  cmake_install.cmake  connected_socket.cc  connected_socket.h  connection.cc  connection.h  connection_manager.cc  server_connection.cc  simple_net.cc  simple_net.h
src/cube/: CMakeLists.txt  aggregate.cc  aggregate.h  aggregate_factory.h  cube.cc  cube.h  cube_impl.cc  cube_impl.h  cube_iterator.cc  cube_iterator.h  cube_iterator_impl.h  cubify_cb.cc  dimension.cc  dimension.h  dimension_factory.h  immutstr.cc  immutstr.h  mt_cube.cc  mt_cube.h  notes.txt  possible_raw_tuple.txt  proto_db.cc  proto_db_batch.cc  proto_db_fwrite_only.cc  proto_db_fwrite_only_no_parse.cc  queue_subscriber.cc  queue_subscriber.h  subscriber.cc  subscriber.h  tuple_batch.cc  tuple_batch.h
src/cube/masstree/: mt_aggregate.cc  mt_aggregate.h  mt_cube.cc  mt_cube.h  mt_iter.cc  mt_iter.h
src/cube/mysql/: aggregate.cc  aggregate.h  aggregate_avg.cc  aggregate_avg.h  aggregate_count.cc  aggregate_count.h  aggregate_min.h  aggregate_quantile.cc  aggregate_quantile.h  aggregate_simple.h  aggregate_string.cc  aggregate_string.h  aggregate_version.cc  aggregate_version.h  cube.cc  cube.h  cube_iterator_impl.cc  cube_iterator_impl.h  dimension.cc  dimension.h  dimension_double.cc  dimension_double.h  dimension_flat.cc  dimension_flat.h  dimension_int.cc  dimension_int.h  dimension_string.cc  dimension_string.h  dimension_time.cc  dimension_time.h  dimension_time_containment.cc  dimension_time_containment.h  dimension_time_hierarchy.cc  dimension_time_hierarchy.h  mysql_cube.h  time_containment_levels.h
src/cube/performance_tests/: CMakeLists.txt  performance_test.cc
src/cube/prototype/: CMakeLists.txt  proto_db.cc  proto_db_batch.cc
src/dataplane/: CMakeLists.txt  FileRead_operator.cc  base_operators.cc  base_operators.h  base_subscribers.cc  base_subscribers.h  chain_ops.cc  chain_ops.h  congest_policy.cc  congest_policy.h  congestion_monitor.h  cube_manager.cc  cube_manager.h  dataplane_comm.cc  dataplane_comm.h  dataplane_operator_loader.cc  dataplane_operator_loader.h  dataplaneoperator.cc  dataplaneoperator.h  dataplaneoperatorloader.cc  dataplaneoperatorloader.h  experiment_operators.cc  experiment_operators.h  filter_subscriber.cc  filter_subscriber.h  latency_measure_subscriber.cc  latency_measure_subscriber.h  liveness_manager.cc  liveness_manager.h  node.cc  node.h  node_config.h  node_daemon.cc  node_dataplane.cc  node_dataplane.h  node_web_interface.cc  node_web_interface.h  nodedataplane.cc  nodedataplane.h  nodedataplane_daemon.cc  (+29 more)
src/mongoose/: CMakeLists.txt  mongoose.c
src/mysql_udfs/: CMakeLists.txt
src/mysql_udfs/merge/: CMakeLists.txt  installdb.sql  installdb_linux.sql  merge.cc  mysqludf.cc
src/proto/: CMakeLists.txt  future_js.proto  jetstream_controlplane.proto  jetstream_dataplane.proto  jetstream_types.proto  worker_api.proto
src/proto/cpp/: jetstream_controlplane.pb.cc  jetstream_controlplane.pb.h  jetstream_dataplane.pb.cc  jetstream_dataplane.pb.h  jetstream_types.pb.cc  jetstream_types.pb.h  worker_api.pb.cc  worker_api.pb.h
src/proto/python/: .gitignore  jetstream_controlplane_pb2.py  jetstream_dataplane_pb2.py  jetstream_types_pb2.py  worker_api_pb2.py
src/python/: run_python_tests.sh
src/tests/: test_backfill.cc  test_base_operators.cc  test_chain_ops.cc  test_comm.cc  test_compare_quantiles.cc  test_consistent_sampling.cc  test_coral.cc  test_core_operators.cc  test_cube.cc  test_cube_mgr.cc  test_datagen.cc  test_executor.cc  test_img_ops.cc  test_loader.cc  test_mtcube.cc  test_node.cc  test_node_unit.cc  test_process.cc  test_quantile_est.cc  test_queues.cc  test_sketches.cc  test_subscribers.cc  test_summary_operators.cc  test_topk_tput.cc  two_nodes.h
src/utils/: buckets.cc  (+24 more)
(+88 files in other folders)
