# Jetstream Build Script
#
# http://www.cmake.org/cmake/help/cmake_tutorial.html

cmake_minimum_required (VERSION 2.4)

# Add Compiler Definitions.  Must be done before project or language set.

option(USE_CLANG "build application with clang" ON)

if(USE_CLANG)
    SET (CMAKE_C_COMPILER             "/usr/bin/clang")
    SET (CMAKE_CXX_COMPILER           "/usr/bin/clang++")
#    SET (CMAKE_AR      "/usr/bin/llvm-ar")
#    SET (CMAKE_LINKER  "/usr/bin/llvm-ld")
#    SET (CMAKE_NM      "/usr/bin/llvm-nm")
#    SET (CMAKE_OBJDUMP "/usr/bin/llvm-objdump")
#    SET (CMAKE_RANLIB  "/usr/bin/llvm-ranlib")
endif(USE_CLANG)

set (CMAKE_VERBOSE_MAKEFILE ON)
set (BUILD_SHARED_LIBS ON)

SET (CMAKE_C_FLAGS                "-Wall -Werror -std=c99")
SET (CMAKE_C_FLAGS_DEBUG          "-g -O0")
SET (CMAKE_C_FLAGS_RELEASE        "-O4 -DNDEBUG")
SET (CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")

SET (CMAKE_CXX_FLAGS                "-Wall -Werror")
SET (CMAKE_CXX_FLAGS_DEBUG          "-g -O0")
SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")

add_definitions (${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG})

set (TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set (SRC_DIR ${TOP_DIR}/src)
set (BUILD_DIR ${TOP_DIR}/src)

#######################################################
# Project flags

project (jetstream)

set (JETSTREAM_VERSION_MAJOR "0" CACHE STRING "Jetstream's major version" FORCE)
set (JETSTREAM_VERSION_MINOR "0" CACHE STRING "Jetstream's minor version" FORCE)
set (JETSTREAM_VERSION_REVISION "1" CACHE STRING "Jetstream's revision version" FORCE)

set (JETSTREAM_VERSION "${JETSTREAM_VERSION_MAJOR}.${JETSTREAM_VERSION_MINOR}.${JETSTREAM_VERSION_REVISION}"  CACHE STRING "Jetstream's complete version"  FORCE)

# Generate a configuration file with these settings
configure_file (${SRC_DIR}/utils/js_version.h.in ${SRC_DIR}/utils/js_version.h)

#######################################################

# Requires Boost
find_package (Boost COMPONENTS system thread chrono program_options REQUIRED) 
if (APPLE)
  set (Boost_USE_STATIC_LIBS ON)
  set (Boost_USE_MULTITHREADED ON) 
endif ()
include_directories (${Boost_INCLUDE_DIRS})

# Require ProtoBufs
include (FindProtobuf)
find_package (Protobuf REQUIRED)
include_directories (${PROTOBUF_INCLUDE_DIR})


#######################################################
# Set library locations and sources

set (LIBRARY_NAME jsutils)
add_subdirectory (${SRC_DIR}/utils)
link_directories (${BUILD_DIR}/utils)
set (LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})

include_directories (${SRC_DIR}/utils)

set (LIBRARY_NAME jsproto)
add_subdirectory (${SRC_DIR}/proto)
link_directories (${BUILD_DIR}/proto)
set (LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})

include_directories (${SRC_DIR}/proto/cpp)

set (LIBRARY_NAME jscomm)
add_subdirectory (${SRC_DIR}/comm)
link_directories (${BUILD_DIR}/comm)
set (LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})

include_directories (${SRC_DIR}/comm)

include_directories (${SRC_DIR}/cube ${SRC_DIR}/dataplane)

# Dependencies are tricky, because protobuf .h files autogenerated, so we need
#  to make sure it's built before other libraries which include it

set (LIBRARY_NAME jsdataplane)
add_subdirectory (${SRC_DIR}/dataplane)
add_dependencies (${LIBRARY_NAME} jsproto)
link_directories (${BUILD_DIR}/dataplane)
set (LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})


#######################################################
# Use CLang by default



#######################################################
# Build executables

set (LIBRARIES ${LIBRARIES}
    ${Boost_LIBRARIES}
    ${PROTOBUF_LIBRARY}
)

message (STATUS "Linking libraries ${LIBRARIES}")

#set (JSNODED ${BUILD_DIR}/dataplane/jsnoded)
set (JSNODED jsnoded)

add_executable (${JSNODED} ${SRC_DIR}/dataplane/nodedataplane_daemon.cc)
add_dependencies (${JSNODED} jsproto)
target_link_libraries (${JSNODED} ${LIBRARIES})

# install (TARGETS jetstream DESTINATION bin)
