# Jetstream Build Script
#
# http://www.cmake.org/cmake/help/cmake_tutorial.html

cmake_minimum_required (VERSION 2.4)

# Add Compiler Definitions.  Must be done before project or language set.

option(USE_CLANG "build application with clang" ON)

if(USE_CLANG)
    SET (CMAKE_C_COMPILER             "/usr/bin/clang")
    SET (CMAKE_CXX_COMPILER           "/usr/bin/clang++")
#    SET (CMAKE_AR      "/usr/bin/llvm-ar")
#    SET (CMAKE_LINKER  "/usr/bin/llvm-ld")
#    SET (CMAKE_NM      "/usr/bin/llvm-nm")
#    SET (CMAKE_OBJDUMP "/usr/bin/llvm-objdump")
#    SET (CMAKE_RANLIB  "/usr/bin/llvm-ranlib")
endif(USE_CLANG)

set (CMAKE_VERBOSE_MAKEFILE ON)
set (BUILD_SHARED_LIBS ON)

SET (CMAKE_C_FLAGS                "-Wall -Werror -std=c99 -DNO_SSL")
SET (CMAKE_C_FLAGS_DEBUG          "-g -O0")
SET (CMAKE_C_FLAGS_RELEASE        "-O4 -DNDEBUG")
SET (CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")

SET (CMAKE_CXX_FLAGS                "-Wall -Werror -DNO_SSL")
SET (CMAKE_CXX_FLAGS_DEBUG          "-g -O0")
SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")

add_definitions (${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG})

set (TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set (SRC_DIR ${TOP_DIR}/src)
set (BUILD_DIR ${TOP_DIR}/src)

set (TESTLIB "js_tests") #name for the library containing our unit tests

#######################################################
# Project flags

project (jetstream)

set (JETSTREAM_VERSION_MAJOR "0" CACHE STRING "Jetstream's major version" FORCE)
set (JETSTREAM_VERSION_MINOR "0" CACHE STRING "Jetstream's minor version" FORCE)
set (JETSTREAM_VERSION_REVISION "1" CACHE STRING "Jetstream's revision version" FORCE)

set (JETSTREAM_VERSION "${JETSTREAM_VERSION_MAJOR}.${JETSTREAM_VERSION_MINOR}.${JETSTREAM_VERSION_REVISION}"  CACHE STRING "Jetstream's complete version"  FORCE)

# Generate a configuration file with these settings
configure_file (${SRC_DIR}/utils/js_version.h.in ${SRC_DIR}/utils/js_version.h)

#######################################################
#   Finding libraries


# Requires Boost
find_package (Boost COMPONENTS system thread chrono regex program_options REQUIRED) 
if (APPLE)
  set (Boost_USE_STATIC_LIBS ON)
  set (Boost_USE_MULTITHREADED ON) 
endif ()
include_directories (${Boost_INCLUDE_DIRS})

# Require ProtoBufs
include (FindProtobuf)
find_package (Protobuf REQUIRED)
include_directories (${PROTOBUF_INCLUDE_DIR})

# Require Google Test
include (FindGTest)
find_package (GTest REQUIRED)
include_directories (${GTEST_INCLUDE_DIR})

#  Google's glog logger
find_library(GLOG_LIB glog) #glog has no dependencies and so this is safe. --ASR

#######################################################
# Set library locations and sources

set (LIBRARY_NAME jsutils)
add_subdirectory (${SRC_DIR}/utils)
link_directories (${BUILD_DIR}/utils)
set (LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})

include_directories (${SRC_DIR}/utils)

set (LIBRARY_NAME jsproto)
add_subdirectory (${SRC_DIR}/proto)
link_directories (${BUILD_DIR}/proto)
set (LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})

include_directories (${SRC_DIR}/proto/cpp)

set (LIBRARY_NAME jscomm)
add_subdirectory (${SRC_DIR}/comm)
link_directories (${BUILD_DIR}/comm)
set (LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})

include_directories (${SRC_DIR}/comm)


set (LIBRARY_NAME mongoose)
add_subdirectory (${SRC_DIR}/mongoose)
link_directories (${BUILD_DIR}/mongoose)
set (LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})
include_directories (${SRC_DIR}/mongoose)


include_directories (${SRC_DIR}/cube ${SRC_DIR}/dataplane)

# Dependencies are tricky, because protobuf .h files autogenerated, so we need
#  to make sure it's built before other libraries which include it

set (LIBRARY_NAME jsdataplane)
add_subdirectory (${SRC_DIR}/dataplane)
add_dependencies (${LIBRARY_NAME} jsproto)
link_directories (${BUILD_DIR}/dataplane)
set (LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})


add_subdirectory (${SRC_DIR}/cube)

#######################################################
# Use CLang by default



#######################################################
# Build executables

set (LIBRARIES ${LIBRARIES}
    ${Boost_LIBRARIES}
    ${PROTOBUF_LIBRARY}
    ${GTEST_LIBRARY}
    ${GLOG_LIB}
)

message (STATUS "Linking libraries ${LIBRARIES}")

#####  The worker process, jsnoded
set (JSNODED jsnoded)

add_executable (${JSNODED} ${SRC_DIR}/dataplane/node_daemon.cc)
add_dependencies (${JSNODED} jsproto) #A js-specific entry to add our protobuf generated code
target_link_libraries (${JSNODED} ${LIBRARIES})




###################################################
# Build the unit tests

file (GLOB_RECURSE TESTS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/test_*.cc")

set (TESTS ${SRC_DIR}/js_unit_tests.cc ${TESTS})

add_executable (js_unit_tests ${TESTS})
target_link_libraries (js_unit_tests ${LIBRARIES})
target_link_libraries (js_unit_tests ${LIBRARY_NAME}) #the js node library


file (GLOB_RECURSE OPS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*_operator.cc")
foreach(OP ${OPS})
  get_filename_component(OP_NAME ${OP} NAME_WE)
  target_link_libraries (js_unit_tests  ${OP_NAME})
endforeach(OP)
